修改出租记录的Bean类